--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,6 @@ out/
 
 # Simulation GUI and other tools window save file
 *-window.json
+
+# Add BuildConstants to .gitignore
+src/main/java/frc/robot/BuildConstants.java
