--- a/build.gradle
+++ b/build.gradle
@@ -144,3 +144,12 @@ spotless {
         endWithNewline()
     }
 }
+project.compileJava.dependsOn(createVersionFile)
+gversion {
+    srcDir       = "src/main/java/"
+    classPackage = "frc.robot"
+    className    = "BuildConstants"
+    dateFormat   = "yyyy-MM-dd HH:mm:ss z"
+    timeZone     = "America/Los_Angeles" // Use preferred time zone
+    indent       = "  "
+}
